gcc/testsuite/gcc.dg/c2x-old-style-definition-2.c
/* Test old-style function definitions not in C2x: errors.  */
/* { dg-do compile } */
/* { dg-options "-std=c2x -pedantic-errors" } */

void
f (x) /* { dg-error "old-style function definition" } */
     int x;
{
}
